fixed changes with the google translate button not showing when exit

--- a/frontend/src/Views/Customer/css/Login.css
+++ b/frontend/src/Views/Customer/css/Login.css
@@ -138,8 +138,8 @@
 
 .bottom-left-buttons {
   position: fixed;
-  bottom: 20px;
-  left: 20px;
+  bottom: 95px;
+  left: 40px;
   display: flex;
   gap: 12px;
   z-index: 1000;
